fixed alignment issues

--- a/final_2/assets/css/see_comment.css
+++ b/final_2/assets/css/see_comment.css
@@ -12,10 +12,7 @@ body, html {
 }
 
 .input_align {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .top_div {
